fix: default button is broken on dark theme

--- a/src/main/resources/viewtify/dark.css
+++ b/src/main/resources/viewtify/dark.css
@@ -39,7 +39,7 @@
     -fx-link: rgb(72, 186, 234);
     
     /* Default buttons color, this is similar to accent but more subtle */
-    -fx-default-button: -fx-background;
+    -fx-default-button: -fx-control-inner-background;
 
     /* A bright blue for the focus indicator of objects. Typically used as the
      * first color in -fx-background-color for the "focused" pseudo-class. Also
